# src/gamesystem/adapter/controller/DeleteGamesystemController.js
@@ -1,15 +1,19 @@
-// HealthcheckController.js
+// DeleteGamesystemController.js
 
 const GenericController = require('../../../shared/adapter/controller/GenericController');
 
-class HealthcheckController extends GenericController {
+class DeleteGamesystemController extends GenericController {
   async execute(req, res, next) {
     try {
-      const moduleName = HealthcheckController.name;
-
+      const moduleName = DeleteGamesystemController.name;
       this.logger.info(`${moduleName} (IN) --> req: <<req>, res: <<res>>, next: <<next>>`);
 
-      const result = await this.uc.execute(this.presenter, this.logger);
+      const parseFields = {
+        params: ['gamesystemId'],
+      };
+      const params = this.requestParser.parse(req, parseFields);
+
+      const result = await this.uc.execute(this.repository, this.presenter, this.logger, params);
 
       this.logger.info(`${moduleName} (OUT) --> result: ${JSON.stringify(result)}`);
       res.status(result.code).json(result.data);
@@ -20,4 +24,4 @@ class HealthcheckController extends GenericController {
   }
 }
 
-module.exports = HealthcheckController;
+module.exports = DeleteGamesystemController;
